sc/source/filter/xml/xmlcelli.cxx
@@ -1495,7 +1495,6 @@ void ScXMLTableRowCellContext::EndElement()
     if( bFormulaTextResult && (mbPossibleErrorCell || mbCheckWithCompilerForError) )
     {
         maStringValue.reset(GetFirstParagraph());
-        nCellType = util::NumberFormat::TEXT;
     }
 
     ScAddress aCellPos = rXMLImport.GetTables().GetCurrentCellPos();
