sc/qa/unit/subsequent_filters-test.cxx
@@ -139,6 +139,8 @@ public:
     void testMiscRowHeights();
     void testOptimalHeightReset();
 
+    void testTdf100458();
+
     CPPUNIT_TEST_SUITE(ScFiltersTest);
     CPPUNIT_TEST(testBasicCellContentODS);
     CPPUNIT_TEST(testRangeNameXLS);
@@ -203,6 +205,9 @@ public:
 #endif
     CPPUNIT_TEST(testMiscRowHeights);
     CPPUNIT_TEST(testOptimalHeightReset);
+
+    CPPUNIT_TEST(testTdf100458);
+
     CPPUNIT_TEST_SUITE_END();
 
 private:
@@ -2002,6 +2007,16 @@ void ScFiltersTest::testOptimalHeightReset()
     // check if the new height of A1 ( after delete ) is now the optimal height of an empty cell
     CPPUNIT_ASSERT_EQUAL(nOptimalHeight, nHeight );
     xDocSh->DoClose();
+}
+
+void ScFiltersTest::testTdf100458()
+{
+    ScDocShellRef xDocSh = loadDoc("tdf100458_lost_zero_value.", FORMAT_ODS);
+    CPPUNIT_ASSERT_MESSAGE("Failed to open doc", xDocSh.Is());
+    ScDocument& rDoc = xDocSh->GetDocument();
+    CPPUNIT_ASSERT(rDoc.HasValueData(0, 0, 0));
+    CPPUNIT_ASSERT_EQUAL(double(0.0), rDoc.GetValue(0,0,0));
+    CPPUNIT_ASSERT(!rDoc.HasStringData(0, 0, 0));
 }
 
 ScFiltersTest::ScFiltersTest()
